--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -4,6 +4,7 @@ $color1: #FFF; //white
 $color2: #1b4a7d;
 $filter: false;
 $font1: "微软雅黑", "Microsoft YaHei", "宋体", "SimSun", "黑体", "SimHei";// microsoft yahei
+$font2: "黑体";
 $height: icons-sprite-height(btnsearch);
 $width: icons-sprite-width(btnsearch);
 $icons-layout: smart;
