--- a/sass/partials/_modules.scss
+++ b/sass/partials/_modules.scss
@@ -1,7 +1,19 @@
 @charset "utf-8";
-html,body {
+html {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+	-webkit-font-smoothing: antialiased;
+	-webkit-overflow-scrolling: touch;
+	-moz-overflow-scrolling: touch;
+	-o-overflow-scrolling: touch;
+	overflow-scrolling: touch;
+}
+body {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
 }
 .start-page {
 	width: 100%;
@@ -17,10 +29,20 @@ html,body {
 	background-image: image-url('imglogo.png');
 	background-size: 201px 51px;
 	position: absolute;
-	top: 50%;
-	margin-top: -25px;
+	bottom: 50%;
+	margin-bottom: -15px;
 	left: 50%;
 	margin-left: -100px;
+	-webkit-transform: rotate(0) scale(0.01);
+	-moz-transform: rotate(0) scale(0.01);
+	-ms-transform: rotate(0) scale(0.01);
+	-o-transform: rotate(0) scale(0.01);
+	transform: rotate(0) scale(0.01);
+	-webkit-transition: 1s ease-in-out;
+	-moz-transition: 1s ease-in-out;
+	-ms-transition: 1s ease-in-out;
+	-o-transition: 1s ease-in-out;
+	transition: 1s ease-in-out;
 }
 .index-page {
 	@extend .start-page;
@@ -32,15 +54,452 @@ html,body {
 	left: 0;
 	bottom: 0;
 	ul {
+		width: 100%;
+		text-align: center;
+		font-size: 0;
 		li {
-			float: left;
-			width: 114px;
-			padding: 0 23px;
+			font-size: 12px;
+			display: inline-block;
+			width: 57px;
+			padding: 0 12px 0 11px;
+			text-align: center;
+			margin-bottom: 10px;
 			i {
 				display: block;
 				width: 57px;
 				height: 57px;
 			}
+			a {
+				color: #fff;
+			}
 		}
 	}
+}
+.icon1,.icon2,.icon3,.icon4,.icon5,.icon6,.icon7,.icon8,.icon9,.icon10,.icon11,.icon12 {
+	background-image: image-url('indexnav.png');
+	-webkit-background-size: 228px 171px;
+	background-size: 228px 171px;
+}
+.icon1 {
+	background-position: 0 0;
+}
+.icon2 {
+	background-position: -57px 0;
+}
+.icon3 {
+	background-position: -114px 0;
+}
+.icon4 {
+	background-position: -171px 0;
+}
+.icon5 {
+	background-position: 0 -57px;
+}
+.icon6 {
+	background-position: -57px -57px;
+}
+.icon7 {
+	background-position: -114px -57px;
+}
+.icon8 {
+	background-position: -171px -57px;
+}
+.icon9 {
+	background-position: 0 -114px;
+}
+.icon10 {
+	background-position: -57px -114px;
+}
+.icon11 {
+	background-position: -114px -114px;
+}
+.icon12 {
+	background-position: -171px -114px;
+}
+#header {
+	height: 44px;
+	width: 100%;
+	background: #205ba8;
+	line-height: 44px;
+	text-align: center;
+	position: relative;
+	z-index: 999;
+	transition: all 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	font-size: 18px;
+	color: #fff;
+	font-family: $font2;
+	i {
+		display: block;
+		width: 24px;
+		height: 20px;
+		position: absolute;
+	}
+}
+.menu_open {
+	background-position: 0 0;
+	left: 10px;
+	top: 12px;
+}
+.menu_home {
+	background-position: 0 -78px;
+	right: 10px;
+	top: 12px;
+	width: 23px;
+	height: 23px;
+	position: absolute;
+	display: block;
+}
+#container {
+	-webkit-transition: -webkit-transform 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	-moz-transition: -moz-transform 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	-o-transition: -o-transform 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	transition: transform 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	position: relative;
+	top: 0;
+	left: 0px;
+	width: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+	height: 100%;
+	background: #fff;
+}
+.swiper-container {
+	width: 100%;
+	height: 32px;
+	text-align: center;
+	background-image: image-url('bgcolumn.jpg');
+}
+.swiper-slide {
+	.title {
+		line-height: 32px;
+		a {
+			display: block;
+			width: 100%;
+			line-height: 32px;
+			&:hover {
+				background-image: image-url('bgcolumna.jpg');
+				background-position: 0 bottom;
+				background-repeat: repeat-x;
+			}
+		}
+	}
+}
+.swiper-slide .title a.hover {
+	background-image: image-url('bgcolumna.jpg');
+	background-position: 0 bottom;
+	background-repeat: repeat-x;
+}
+.column {
+	height: 32px;
+	width: 100%;
+	background-image: image-url('bgcolumn.jpg');
+	ul {
+		li {
+			float: left;
+			width: 25%;
+			text-align: center;
+			a {
+				display: block;
+				width: 100%;
+				line-height: 32px;
+				&:hover {
+					background-image: image-url('bgcolumna.jpg');
+					background-position: 0 bottom;
+					background-repeat: repeat-x;
+				}
+			}
+		}
+		li.hover {
+			a {
+				background-image: image-url('bgcolumna.jpg');
+				background-position: 0 bottom;
+				background-repeat: repeat-x;
+			}
+		}
+	}
+}
+#slides {
+	padding: 20px 20px;
+	max-width: 280px;
+	margin: 0 auto;
+	display: none;
+	dl {
+		dt {
+			float: right;
+			width: 150px;
+			color: #b0afaf;
+			font-family: $font1;
+			font-size: 12px;
+			text-align: left;
+			line-height: 20px;
+			i {
+				background-position: -27px 0;
+				width: 11px;
+				height: 11px;
+				display: inline-block;
+				margin-right: 5px;
+				margin-top: 5px;
+			}
+		}
+		dd.pic {
+			float: left;
+			width: 130px;
+			height: 80px;
+			img {
+				width: 120px;
+				height: 80px;
+			}
+		}
+		dd.txt {
+			font-size: 14px;
+			font-family: $font1;
+			color: #0d3973;
+			width: 150px;
+			float: right;
+			line-height: 20px;
+		}
+	}
+}
+#slides .slidesjs-navigation {
+  margin-top:5px;
+}
+#slides .slidesjs-pagination {
+  margin: 7px 0 0;
+  float: left;
+  list-style: none;
+}
+#slides .slidesjs-pagination li {
+  float: left;
+  margin: 0 5px;
+}
+#slides .slidesjs-pagination li a {
+  display: block;
+  width: 10px;
+  height: 0;
+  padding-top: 10px;
+  background-position: -10px -22px;
+  float: left;
+  overflow: hidden;
+}
+#slides .slidesjs-pagination li a.active,
+#slides .slidesjs-pagination li a:hover.active {
+  background-position: 0 -22px
+}
+
+#slides .slidesjs-pagination li a:hover {
+  background-position: 0 -22px
+}
+.navbar {
+  overflow: hidden
+}
+.news-list {
+	overflow: hidden;
+	padding: 0 0 40px 0;
+	ul {
+		li {
+			border-bottom: 1px solid #ebeaea;
+			padding: 10px 0;
+			float: left;
+			width: 100%;
+			div {
+				padding: 0 20px;
+				span {
+					display: block;
+					i {
+						background-position: -27px 0;
+						width: 11px;
+						height: 11px;
+						display: inline-block;
+						margin-right: 5px;
+						margin-top: 5px;
+					}
+				}
+			}
+		}
+	}
+}
+.news-list ul li:nth-of-type(even) {
+	background: #f6f6f6;
+}
+#menu.push {
+	visibility: visible;
+	-webkit-transition-delay: 0s;
+	-moz-transition-delay: 0s;
+	-o-transition-delay: 0s;
+	transition-delay: 0s;
+}
+#header.push {
+	-webkit-transform: translateX(195px);
+	-moz-transform: translateX(195px);
+	transform: translateX(195px);
+}
+#container.push, #us_panel.push {
+	-webkit-transform: translateX(195px);
+	-moz-transform: translateX(195px);
+	transform: translateX(195px);
+}
+.search_wrap {
+	overflow: hidden;
+	position: relative;
+}
+.search_input {
+	text-indent: 15px;
+	height: 15px;
+	line-height: 16px;
+	display: block;
+	margin: 0 auto;
+	width: 132px;
+	border: none;
+	color: #6c6c6c;
+	padding: 6px 20px 6px 15px;
+	background-color: #fff;
+	margin-top: 12.5px;
+	@include border-radius(15px);
+}
+.reset_input {
+	width: 12px;
+	height: 12px;
+	position: absolute;
+	display: block;
+	top: 10px;
+	left: 20px;
+	i {
+		display: block;
+		width: 12px;
+		height: 12px;
+		background-position: -39px 0;
+		position: absolute;
+		top: 10px;
+		left: 5px;
+		opacity: 0.4;
+		-webkit-transition: all 0.3s ease-out;
+		-moz-transition: all 0.3s ease-out;
+		-o-transition: all 0.3s ease-out;
+		transition: all 0.3s ease-out;
+	}
+}
+#menu {
+	width: 195px;
+	height: 100%;
+	position: fixed;
+	top: 0px;
+	left: 0;
+	-webkit-transition-delay: 0.3s;
+	-moz-transition-delay: 0.3s;
+	-o-transition-delay: 0.3s;
+	transition-delay: 0.3s;
+	background-image: image-url('bgmenu.png');
+	-webkit-background-size: 195px 548px;
+	background-size: 195px 548px;
+}
+#menu ul {
+	padding: 24px 10px 0;
+}
+#menu ul li:first-child {
+	border-top: 1px solid #1d5297;
+}
+#menu ul li {
+	display: block;
+	height: 45px;
+	line-height: 46px;
+	border-bottom: 1px solid #1d5297;
+	overflow: hidden;
+	-webkit-transition: background 0.3s ease-out;
+	-moz-transition: background 0.3s ease-out;
+	-o-transition: background 0.3s ease-out;
+	transition: background 0.3s ease-out;
+}
+#menu ul li a {
+	display: block;
+	width: 100%;
+	height: 33px;
+	color: #fff;
+	overflow: hidden;
+	padding-top: 9px;
+}
+#menu ul li a span {
+	display: block;
+	height: 16px;
+	line-height: 16px;
+	float: left;
+	margin-left: 15px;
+	font-size: 14px;
+	font-family: "黑体";
+	margin-top: 5px;
+}
+#menu ul li a i {
+	display: block;
+	width: 28px;
+	height: 28px;
+	float: left;
+	margin-left: 20px;
+}
+#menu ul .nav_about a i {
+	background-position: 0 -41px;
+}
+#menu ul .nav_news a i {
+	background-position: -28px -41px;
+}
+#menu ul .nav_recruit a i {
+	background-position: -56px -41px;
+}
+#menu ul .nav_scuebce a i {
+	background-position: -84px -41px;
+}
+#menu ul .nav_culture a i {
+	background-position: -112px -41px;
+}
+#menu ul .nav_cooper a i {
+	background-position: -140px -41px;
+}
+#menu ul .nav_service a i {
+	background-position: -168px -41px;
+}
+#footer {
+	height: 50px;
+	background: #0d3973;
+	position: absolute;
+	z-index: 9999;
+	transition: all 0.3s cubic-bezier(0.165,0.84,0.44,1);
+	width: 100%;
+	left: 0;
+	bottom: 50px;
+	a {
+		width: 24px;
+		height: 24px;
+		float: left;
+		margin: 12px 20px;
+		text-indent: -9999px;
+	}
+}
+.home {
+	background-position: 0 -78px;
+}
+.favourite {
+	background-position: -23px -78px;
+}
+.message {
+	background-position: -46px -78px;
+}
+.shownews {
+	padding: 20px 20px 40px 20px;
+	font-family: $font1;
+	color: #333333;
+}
+.copyright {
+	display: block;
+	line-height: 40px;
+	height: 40px;
+	margin-top: 40px;
+	font-family: $font1;
+}
+.c-r {
+	float: right;
+}
+.c-l {
+	float: left;
+}
+.about img,.cnt-shownews img {
+	max-width: 100%;
+	height: auto;
 }
