--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -10,7 +10,7 @@ a:link,a:visited {
 a:hover,a:active {
 	color: #0d3973;
 }
-.menu_open,.slidesjs-pagination li a,#slides dl dt i,.news-list i,.reset_input i,#menu ul li a i,#footer a,.menu_home {
+.menu_open,.slidesjs-pagination li a,#slides dl dt i,.news-list i,.reset_input i,#menu ul li a i,#footer a,.menu_home, .list_loading i {
 	background-image: image-url('iconbg.png');
 	-webkit-background-size: 200px 200px;
 	background-size: 200px 200px;
