--- a/sass/partials/_modules.scss
+++ b/sass/partials/_modules.scss
@@ -545,3 +545,45 @@ body {
         transform: rotate(360deg);
     }
 }
+
+#loading_mask { width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: #fff; z-index: 999; }
+
+/*.loading_mask { width: 80px; height: 120px; background: url('../images/loading.png') no-repeat 50% 0; background-size: 77px 97px; position: absolute; top: 50%; left: 50%; margin: -120px 0 0 -40px; }*/
+.loading_mask { width: 80px; height: 120px; position: absolute; top: 50%; left: 50%; margin: -120px 0 0 -40px; }
+
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0); background: #e5e5e5; }
+    40% { -webkit-transform: scale(1.0); background: #6bc30d; }
+}
+
+@-moz-keyframes bouncedelay {
+    0%, 80%, 100% { transform: scale(0.0); -moz-transform: scale(0.0); background: #e5e5e5; }
+    40% { transform: scale(1.0); -moz-transform: scale(1.0); background: #6bc30d; }
+}
+
+@keyframes bouncedelay {
+    0%, 80%, 100% { transform: scale(0.0); -webkit-transform: scale(0.0); background: #e5e5e5; }
+    40% { transform: scale(1.0); -webkit-transform: scale(1.0); background: #6bc30d; }
+}
+
+.loading #loading_mask { opacity: 1; display: block; -webkit-transform: translateX(0); -moz-transform: translateX(0); -o-transform: translateX(0); transform: translateX(0); -webkit-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1); -moz-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1); -o-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1); transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1); }
+
+#loading_mask { -webkit-transform: translateX(100%); -moz-transform: translateX(100%); -o-transform: translateX(100%); transform: translateX(100%); display: none; }
+
+.loading_dark { width: 100%; height: 100%; position: absolute; background: #000; top: 0; left: 0; z-index: 999; visibility: hidden; opacity: 0; }
+
+.loading .loading_dark { opacity: 1; visibility: visible; -webkit-transition: all 0.3s linear; -moz-transition: all 0.3s linear; -o-transition: all 0.3s linear; transition: all 0.3s linear; }
+
+.loading_mask ul { height: 8px; display: block; position: absolute; left: 0; bottom: 0; width: 110px; overflow: hidden; margin-left: 4px; text-align: center; }
+
+.loading_mask ul li { display: block; float: left; width: 8px; height: 8px; background: #e5e5e5; margin-right: 8px; -o-border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; -webkit-animation-fill-mode: both; -moz-animation-fill-mode: both; -o-animation-fill-mode: both; -ms-animation-fill-mode: both; animation-fill-mode: both; }
+
+.loading_mask ul.anm li { background: #e5e5e5; width: 8px; height: 8px; border-radius: 100%; display: inline-block; -webkit-animation: bouncedelay 1.4s infinite ease-in-out; animation: bouncedelay 1.4s infinite ease-in-out; -webkit-animation-fill-mode: both; animation-fill-mode: both }
+
+.loading_mask ul.anm li:nth-child(1) { -webkit-animation-delay: -0.64s; -moz-animation-delay: -0.64s; animation-delay: -0.64s }
+
+.loading_mask ul.anm li:nth-child(2) { -webkit-animation-delay: -0.48s; -moz-animation-delay: -0.48s; animation-delay: -0.48s }
+
+.loading_mask ul.anm li:nth-child(3) { -webkit-animation-delay: -0.32s; -moz-animation-delay: -0.32s; animation-delay: -0.32s }
+
+.loading_mask ul.anm li:nth-child(4) { -webkit-animation-delay: -0.16s; -moz-animation-delay: -0.16s; animation-delay: -0.16s }
